[package]
name = "solbar"
version = "0.1.0"
description = "Solbar — RWA Tokenization Platform on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solbar"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token_2022", "token_2022_extensions", "associated_token"] }

# SPL dependencies matched for Anchor 0.32.1
spl-token-2022 = "10.0.0"
spl-transfer-hook-interface = "2.1.0"
spl-token-metadata-interface = "0.8.0"
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }