[package]
name = "solbar"
version = "0.1.0"
description = "Solbar — RWA Tokenization Platform on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solbar"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.32.1", features = [
    "token_2022",
    "token_2022_extensions",
    "associated_token",
] }
constant_time_eq = "=0.3.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }